src/plugins/platforms/windows/qwindowsopengltester.cpp
@@ -322,16 +322,17 @@ QWindowsOpenGLTester::Renderers QWindowsOpenGLTester::detectSupportedRenderers(c
             result |= QWindowsOpenGLTester::DesktopGl;
     }
 
-    const char bugListFileVar[] = "QT_OPENGL_BUGLIST";
-    QString buglistFileName = QStringLiteral(":/qt-project.org/windows/openglblacklists/default.json");
-
-    if (qEnvironmentVariableIsSet(bugListFileVar)) {
-        const QString fileName = resolveBugListFile(QFile::decodeName(qgetenv(bugListFileVar)));
-        if (!fileName.isEmpty())
-            buglistFileName = fileName;
+    QSet<QString> features; // empty by default -> nothing gets disabled
+    if (!qEnvironmentVariableIsSet("QT_NO_OPENGL_BUGLIST")) {
+        const char bugListFileVar[] = "QT_OPENGL_BUGLIST";
+        QString buglistFileName = QStringLiteral(":/qt-project.org/windows/openglblacklists/default.json");
+        if (qEnvironmentVariableIsSet(bugListFileVar)) {
+            const QString fileName = resolveBugListFile(QFile::decodeName(qgetenv(bugListFileVar)));
+            if (!fileName.isEmpty())
+                buglistFileName = fileName;
+        }
+        features = QOpenGLConfig::gpuFeatures(qgpu, buglistFileName);
     }
-
-    QSet<QString> features = QOpenGLConfig::gpuFeatures(qgpu, buglistFileName);
     qCDebug(lcQpaGl) << "GPU features:" << features;
 
     if (features.contains(QStringLiteral("disable_desktopgl"))) { // Qt-specific
